--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,18 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
+
+
     executor: ruby/default
     steps:
       - checkout
       - run:
-          name: Which bundler?
-          command: bundle -v
+          name: Configure Bundler
+          command: |
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
+      # - run:
+      #     name: Which bundler?
+      #     command: bundle -v
       - ruby/bundle-install
